build: Remove JVM args and set Windows package version